# x-viz

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: release.yml
docs/: README_zh.md
scripts/: build.sh  gen-icons.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bing.rs  commands.rs  config.rs  lib.rs  logger.rs  main.rs  scheduler.rs  storage.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  i18n.ts  index.css  theme.ts
ui/src/components/: Gallery.tsx  Icons.tsx  Settings.tsx  Toast.tsx
ui/src/styles/: gallery.css  settings.css  toast.css
